meta keywords facility for pages

--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -19,5 +19,8 @@
       });
     }
   }
-  </script>
-  
+</script>
+
+{% if page.keywords %}
+<meta name="keywords" content="{{ page.keywords | join: ', ' | escape }}">
+{% endif %}
